tests/cases/compiler-development/artifact/errors/diagnostic-method-arity.ari
struct Box[T] {
  value: T,
}

impl[T] Box[T] {
  fn replace[U](self, value: U) -> Box[U] {
    Box { value: value }
  }
}

fn main() -> i64 {
  let value = Box { value: true }.replace();
  return 0;
}
